--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,24 @@
     "react-router-dom": "^4.3.1",
     "axios": "^0.19.0"
   },
+  "lint-staged": {
+    "*.js": "eslint"
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {
+    "lint-staged": "^9.4.2",
+    "pre-commit": "^1.2.2"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
