--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.3.16",
     "mysql2": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^5.21.2"
   }
 }
