--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,19 @@
       "es6": true,
       "node": true
   },
+  "parser": "babel-eslint",
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true,
+      "experimentalObjectRestSpread": true
+    }
   },
   "rules": {
       "no-duplicate-case":"error",
