--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "concurrently": "^4.1.0",
-    "eslint": "^5.12.0",
+    "eslint": "5.12.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "nodemon": "^1.18.7",
