--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "concurrently": "^4.1.0",
-    "eslint": "^5.12.0",
+    "eslint": "5.12.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "nodemon": "^1.18.7",
@@ -31,8 +32,13 @@
     "axios": "^0.18.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.2"
   }
 }
