--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1",
     "react-router-dom": "^4.3.1",
-    "axios": "^0.19.0"
+    "react-scripts": "^2.1.1",
+    "react-select": "^3.0.8"
   },
   "lint-staged": {
     "*.js": "eslint"
