--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "express-fileupload": "^1.1.6-alpha.6",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "mysql2": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
