--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^1.17.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.2",
     "axios": "^0.18.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -38,10 +39,15 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "mysql2": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react": "^16.11.0",
+    "react-dates": "^21.4.0",
+    "react-dom": "^16.11.0",
+    "react-with-direction": "^1.3.1",
     "sequelize": "^5.21.2"
   }
 }
