--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "react": "^16.6.3",
+    "leaflet": "^1.5.1",
+    "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
-    "react-select": "^3.0.8"
+    "react-dates": "^21.5.0",
+    "react-dom": "^16.11.0",
+    "react-leaflet": "^2.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
+    "react-select": "^3.0.8",
+    "react-with-direction": "^1.3.1"
   },
   "lint-staged": {
     "*.js": "eslint"
