--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react": "^16.11.0",
+    "react-dates": "^21.4.0",
+    "react-dom": "^16.11.0",
+    "react-with-direction": "^1.3.1",
     "sequelize": "^5.21.2"
   }
 }
