--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "hashmap": "^2.4.0",
     "leaflet": "^1.5.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
