--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-select": "^3.0.8",
+    "react-stripe-checkout": "^2.6.3",
     "react-with-direction": "^1.3.1"
   },
   "lint-staged": {
