--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dates": "^21.4.0",
     "react-dom": "^16.11.0",
     "react-with-direction": "^1.3.1",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "stripe": "^7.13.0"
   }
 }
