--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
+    "mdbreact": "^4.22.1",
     "moment": "^2.24.0",
     "mysql2": "^2.0.0",
     "passport": "^0.4.0",
