--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.11.0",
     "react-dates": "^21.4.0",
     "react-dom": "^16.11.0",
+    "react-places-autocomplete": "^7.2.1",
     "react-with-direction": "^1.3.1",
     "sequelize": "^5.21.2"
   }
