--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.11.0",
     "react-places-autocomplete": "^7.2.1",
     "react-with-direction": "^1.3.1",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "stripe": "^7.13.0"
   }
 }
