--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.2",
+    "aws-sdk": "^2.574.0",
     "axios": "^0.18.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
