--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/runtime": "^7.7.2",
     "aws-sdk": "^2.574.0",
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
