--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dates": "^21.5.0",
     "react-dom": "^16.11.0",
+    "react-google-login": "^5.0.7",
     "react-leaflet": "^2.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
