--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-dates": "^21.4.0",
     "react-dom": "^16.11.0",
     "react-places-autocomplete": "^7.2.1",
+    "react-reveal": "^1.2.2",
+    "react-star-rating-component": "^1.4.1",
     "react-with-direction": "^1.3.1",
     "reactstrap": "^8.1.1",
     "sequelize": "^5.21.2",
