--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-with-direction": "^1.3.1",
     "reactstrap": "^8.1.1",
     "sequelize": "^5.21.2",
-    "stripe": "^7.13.0"
+    "stripe": "^7.13.0",
+    "web-animations-js": "^2.3.2"
   }
 }
